<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, HipstacastMain!</string>
    <string name="app_name">Hipstacast</string>
    <string name="menu_search">Search</string>
    <string name="menu_add">Add</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_add_URL">Add URL</string>
    <string name="podcast_add_title">Add podcasts</string>
    <string name="podcast_url_alert_add_msg">Paste the URL of the podcast\'s feed in the field</string>
    <string name="podcast_url_alert_add_fetching">Fetching the podcast. Please wait</string>
    <string name="episode_not_downloaded">This episode isn\'t downloaded (%s MB). Would you like to download it now?</string>
    <string name="podcast_subscribe">Do you want to subscribe to "%s"?</string>
    <string name="cancel">Cancel</string>
    <string name="subscribe">Subscribe</string>
    <string name="download">Download</string>
    <string name="menu_play">Play</string>
    <string name="menu_pause">Pause</string>
    <string name="subscription_ok">You\'re now subscribed to "%s"</string>
    <string name="share">Share</string>
    <string name="share_text">I\'m listening to %s</string>
    <string name="settings">Settings</string>
    <string name="fetchFrequency">Update frequency</string>
    <string name="fetchFrequencyDesc">Change this value to change the frequency of time that Hipstacast waits to look for new episodes of your subscriptions.</string>
    <string name="openEpisodeWebsite">Open website</string>
    <string name="donate">Donate</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="delete">Delete</string>
    <string name="unsubscribing">Unsubscribing&#8230;</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="sendfeedback">Send Feedback</string>
    <string name="import_menu">Import</string>
    <string name="export">Export</string>

    <!-- 0.8b3 -->
    <string name="allow_cellular">Downloads over cellular data</string>
    <string name="allow_cellular_desc">Tick te box if you allow the app to download the podcasts over cellular data. If not, the podcasts will only be downloaded over WiFi</string>
    <string name="import_msg" formatted="false">Go to %s with your computer to import your subscriptions. Use the following codes: %d and %d. When you finish tap on Import</string>
    <string name="import_progress">Importing the podcasts. Please wait</string>
    <string name="unlistened_count">%d unlistened episodes</string>
    <string name="soundConfig">Sound settings</string>

    <!-- 0.8b4 -->
    <string name="export_done" formatted="false">Go to %s with your computer to download your subscriptions. Use the following codes: %d and %d.</string>
    <string name="done">Done</string>
    <!-- 0.8b5 -->
    <string name="search_title">Search &#8212; &#8220;%s&#8221;</string>
    <!-- 0.8b6 -->
    <string name="update_title">Software update</string>
    <string name="update_msg">A newer version of Hipstacast is available for your device. The update brings bugfixes, stability improvements along other features.</string>
    <string name="update">Update</string>
    <string name="search_error">An error ocurred while searching. Try again later.</string>
    <string name="search_progress">Searching&#8230;</string>
    <string name="invalid_url">There\'s a problem with the URL. Check that\'s correct.</string>

    <!-- 1.0 -->
    <string name="feed_sync_notification_title">Looking for new episodes&#8230;</string>
    <string name="featured">Featured</string>
    <string name="search_results">Search Results</string>
    <string name="import_not_found_error">We couldn\'t find your subscriptions. Please try again.</string>
    <string name="import_server_error">There was a problem with your request. Please try again later.</string>
    <string name="support">Support</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google+</string>
    <string name="notif_new_episodes_title">You have new podcasts to listen</string>
    <string name="notif_new_episodes_desc_1">%s</string>
    <string name="notif_new_episodes_desc_2" formatted="false">%s and %d more</string>
    <string name="welcome_to_hipstacast">Welcome to Hipstacast</string>
    <string name="start">Start</string>
    <string name="features_list">Bringing the best podcast-listening experience to Android. You can listen or watch to podcasts wherever you are.\n\n&#8226; Holo Interface \n&#8226; Powerful Search \n&#8226; Downloads Management</string>
    <string name="subscribe_features">You can subscribe to some of the following podcasts</string>
    <string name="next">Next</string>
    <string name="already_selected_podcast">You\'ve already selected this podcast</string>
    <string name="wizard_finished">You can now use Hipstacast</string>
    <string name="hope_enjoy">Hope you enjoy it!</string>
    <string name="subscription_count">%d subscriptions</string>
    <string name="player">PLAYER</string>
    <string name="shownotes">SHOWNOTES</string>
    <string name="updating">Updating&#8230;</string>
    <string name="upgrading_database">Tuning the library for the new version&#8230;</string>
    <string name="episodes">Episodes</string>
    <string name="episodes_number">%d episodes</string>
    <string name="details">Details</string>
    
    <!-- 1.0.2 -->
    <string name="mark_as_listened">Mark as listened</string>
    <string name="search_podcasts">Search podcasts</string>
    <!-- Resources -->
    <string name="version_number">1.0.8</string>
    <string name="about">About</string>
    <string name="loveCat">Created with &#9829; in Catalonia</string>

</resources>