<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="General" >
        <ListPreference
            android:entries="@array/fetchFrequencyT"
            android:entryValues="@array/fetchFrequencyV"
            android:key="fetchFrequency"
            android:summary="@string/fetchFrequencyDesc"
            android:title="@string/fetchFrequency" />

        <CheckBoxPreference
            android:key="allowCellular"
            android:summary="@string/allow_cellular_desc"
            android:title="@string/allow_cellular" />
    </PreferenceCategory>
    <PreferenceCategory android:title="About" >
        <Preference
            style="?android:preferenceInformationStyle"
            android:key="version"
            android:summary="@string/version_number"
            android:title="@string/version" />
        <Preference
            style="?android:preferenceInformationStyle"
            android:key="author"
            android:summary="Francesc (@ifrins)"
            android:title="@string/author" />

        <PreferenceScreen
            android:summary=""
            android:title="@string/support" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="mailto:hipstacast.app@gmail.com?subject=Hipstacast Support" />
        </PreferenceScreen>
                <PreferenceScreen
            android:summary=""
            android:title="@string/twitter" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://twitter.com/hipstacast" />
        </PreferenceScreen>
                <PreferenceScreen
            android:summary=""
            android:title="@string/google_plus" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://plus.google.com/102398368854163423092" />
        </PreferenceScreen>
                
        
    </PreferenceCategory>

</PreferenceScreen>