<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuPlayToggle"
        android:icon="@drawable/ic_action_play"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_play"/>
    <item
        android:id="@+id/menuPlayShare"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="ifRoom|withText"
        android:title="@string/share"/>
    <item
        android:id="@+id/menuPlayWebsite"
        android:icon="@drawable/ic_action_website"
        android:showAsAction="ifRoom|withText"
        android:title="@string/openEpisodeWebsite"/>
    <item
        android:id="@+id/menuPlayDonate"
        android:icon="@drawable/ic_action_website"
        android:showAsAction="ifRoom|withText"
        android:title="@string/donate"/>
    <item
        android:id="@+id/menuPlaySoundConfig"
        android:showAsAction="ifRoom|withText"
        android:title="@string/soundConfig" />

</menu>